--CREATE SCHEMA real_estate;
--
--DROP TABLE IF EXISTS re_agent CASCADE;
--DROP TABLE IF EXISTS re_loc_city CASCADE;
--DROP TABLE IF EXISTS re_loc_ward CASCADE;
--DROP TABLE IF EXISTS re_real_estate_type CASCADE;
--DROP TABLE IF EXISTS re_project CASCADE;
--DROP TABLE IF EXISTS re_real_estate CASCADE;

CREATE TABLE re_agent (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text,
  phone text UNIQUE
);

CREATE TABLE re_loc_city (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  city text
);

CREATE TABLE re_loc_ward (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  ward text,
  city_id bigint,
  CONSTRAINT fk_re_loc_ward_city
    FOREIGN KEY (city_id)
    REFERENCES re_loc_city(id)
);

CREATE TABLE re_real_estate_type (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  real_estate_type text
);

CREATE TABLE re_project (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  project_name text,
  description text
);

CREATE TABLE re_real_estate (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  title text,
  link text UNIQUE,
  price bigint,
  bedrooms integer,
  toilets integer,
  area double precision,
  price_1m2 double precision,
  location text,
  description text,
  time_scraped timestamp with time zone,
  re_type_id bigint,
  ward_id bigint,
  project_id bigint,
  agent_id bigint,
  CONSTRAINT fk_re_real_estate_type
    FOREIGN KEY (re_type_id)
    REFERENCES re_real_estate_type(id),
  CONSTRAINT fk_re_real_estate_project
    FOREIGN KEY (project_id)
    REFERENCES re_project(id),
  CONSTRAINT fk_re_real_estate_ward
    FOREIGN KEY (ward_id)
    REFERENCES re_loc_ward(id),
  CONSTRAINT fk_re_real_estate_agent
    FOREIGN KEY (agent_id)
    REFERENCES re_agent(id)
);
